force-app/main/default/objects/HP_PortailUtilisateur__c/HP_PortailUtilisateur__c.object-meta.xml
<CustomObject>
    <label>Utilisateur Portail</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>Utilisateur Portail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilisateurs Portail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>