force-app/main/default/objects/HP_PortailUtilisateur__c/fields/GaiaId__c.field-meta.xml
<CustomField>
    <fullName>GaiaId__c</fullName>
    <label>Gaia Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>