force-app/main/default/objects/HP_PortailUtilisateur__c/fields/HP_Okta_Id__c.field-meta.xml
<CustomField>
    <fullName>HP_Okta_Id__c</fullName>
    <label>Okta Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>