force-app/main/default/objects/HP_PortailUtilisateur__c/fields/HP_Okta_Status__c.field-meta.xml
<CustomField>
    <fullName>HP_Okta_Status__c</fullName>
    <label>Okta Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>