force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Format email</inlineHelpText>
    <label>Login</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>