force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>