force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Min 8 caractères dont : 1 min, 1 maj, 1 spécial, 1 chiffre</inlineHelpText>
    <label>Mot de passe</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>