force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <label>Prestataire associé</label>
    <referenceTo>HP_PortailPrestataire__c</referenceTo>
    <relationshipLabel>Utilisateurs Portail</relationshipLabel>
    <relationshipName>Utilisateurs_Portail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>