force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rôle</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conseiller</fullName>
                <default>true</default>
                <label>Conseiller</label>
            </value>
            <value>
                <fullName>Superviseur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>