force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Sgut2Erreur__c.field-meta.xml
<CustomField>
    <fullName>Sgut2Erreur__c</fullName>
    <label>Sgut2 Message d&apos;erreur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>