force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Sgut2Refresh__c.field-meta.xml
<CustomField>
    <fullName>Sgut2Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sgut2 Refresh</label>
    <type>Checkbox</type>
</CustomField>