force-app/main/default/objects/HP_PortailUtilisateur__c/fields/Sgut2Statut__c.field-meta.xml
<CustomField>
    <fullName>Sgut2Statut__c</fullName>
    <label>Sgut2 Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attente réponse SGUT2</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>