force-app/main/default/objects/HP_PortailUtilisateur__c/validationRules/HP_RegexOnPassword.validationRule-meta.xml
<ValidationRule>
    <fullName>HP_RegexOnPassword</fullName>
    <active>true</active>
    <description>Les règles de composition du mdp, sont les suivantes:
&apos;minimumLength&apos;: 8,
&apos;maximumLength&apos;, Infinity,
&apos;requireCapital&apos;, true,
&apos;requireLower&apos;, true,
&apos;requireNumber&apos;, true,
&apos;requireSpecial&apos;, true, → (/[^a-zA-Z0-9\r\n\t\f\v ]/g),
&apos;spaceForbidden&apos;, true</description>
    <errorConditionFormula>AND (
$Setup.ByPassSettings__c.ValidationRule__c = false, 
NOT(REGEX(Password__c, &quot;((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9\\r\\n\\t\\f\\v]).{8,})&quot;))
)</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>Le mot de passe ne respecte pas le format préconisé !</errorMessage>
</ValidationRule>