force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>