force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/HP_COMPARATEURS.listView-meta.xml
<ListView>
    <fullName>HP_COMPARATEURS</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canal__c</field>
        <operation>contains</operation>
        <value>COMPARAT</value>
    </filters>
    <label>COMPARATEURS</label>
    <sharedTo>
        <role>HP_HAPPE</role>
    </sharedTo>
</ListView>