force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/HP_CRC_HAPPE.listView-meta.xml
<ListView>
    <fullName>HP_CRC_HAPPE</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <columns>Sgut2Statut__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canal__c</field>
        <operation>equals</operation>
        <value>CRC-HAPPE</value>
    </filters>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>happ-e</value>
    </filters>
    <filters>
        <field>Canal__c</field>
        <operation>equals</operation>
        <value>CRC-HAPPE-TAD</value>
    </filters>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>happ-e-tad-fes</value>
    </filters>
    <label>CRC HAPPE Fès</label>
    <sharedTo>
        <role>HP_HAPPE</role>
    </sharedTo>
</ListView>