force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/HP_CRC_HAPPE_Dakar.listView-meta.xml
<ListView>
    <fullName>HP_CRC_HAPPE_Dakar</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <columns>Sgut2Statut__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canal__c</field>
        <operation>equals</operation>
        <value>CRC-HAPPE</value>
    </filters>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>happ-e-dakar</value>
    </filters>
    <label>CRC HAPPE Dakar</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>