force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/HP_CRC_HAPPE_TAD.listView-meta.xml
<ListView>
    <fullName>HP_CRC_HAPPE_TAD</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <columns>Sgut2Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canal__c</field>
        <operation>equals</operation>
        <value>CRC-HAPPE-TAD</value>
    </filters>
    <label>CRC HAPPE TAD</label>
    <sharedTo>
        <role>HP_HAPPE</role>
    </sharedTo>
</ListView>