force-app/main/default/objects/HP_PortailUtilisateur__c/listViews/HP_Tous.listView-meta.xml
<ListView>
    <fullName>HP_Tous</fullName>
    <columns>NAME</columns>
    <columns>Login__c</columns>
    <columns>Role__c</columns>
    <columns>Prestataire__c</columns>
    <columns>Canal__c</columns>
    <columns>Nom__c</columns>
    <columns>Prenom__c</columns>
    <columns>Sgut2Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sgut2Statut__c</field>
        <operation>equals</operation>
        <value>OK</value>
    </filters>
    <label>Tous</label>
</ListView>